fix z-index in sidemenu

--- a/web/app/themes/nattours/assets/styles/common/_mixins.scss
+++ b/web/app/themes/nattours/assets/styles/common/_mixins.scss
@@ -64,7 +64,7 @@
   @include content-section();
   display: flex;
   flex-direction: column;
-  z-index: 999999;
+  z-index: 1000;
   position: fixed;
   top: 0;
   bottom: 0;
